# archv

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  app.hpp  app_.cpp  app_.hpp  json_manager.cpp  json_manager.hpp  link.cpp  main.cpp  main2.cpp  utility.cpp  utility.hpp
src/application/: CMakeLists.txt  all.hpp  allfwd.hpp  app.cpp  app.hpp  app_backends.cpp  app_connections.cpp  app_frontends.cpp  app_input.cpp  application.cpp  application.hpp  archive.cpp  archive.hpp  background_presenter.cpp  background_presenter.hpp  command.hpp  command_history.cpp  command_history.hpp  commands.cpp  commands.hpp  commands_presenter.cpp  commands_presenter.hpp  config.cpp  config.hpp  graph_interface.cpp  graph_interface.hpp  graph_presenter.cpp  graph_presenter.hpp  gui_presenter.cpp  gui_presenter.hpp  json_archive.cpp  json_archive.hpp  main.cpp  paused_state.cpp  paused_state.hpp  shortcut_input_listener.cpp  shortcut_input_listener.hpp  state.hpp  state_machine.cpp  state_machine.hpp  (+5 more)
src/architecture/: CMakeLists.txt  all.hpp  allfwd.hpp  architecture.hpp  components.hpp  concepts.hpp  config.cpp  config.hpp  core.hpp  deserialization.cpp  deserialization.hpp  generation.cpp  generation.hpp  graph.cpp  graph.hpp  graph_generation.cpp  graph_generation.hpp  graph_interface.cpp  graph_interface.hpp  graph_output.cpp  graph_output.hpp  metadata.cpp  metadata.hpp  symbol_table.cpp  symbol_table.hpp  symbols.hpp  vertex_marker.cpp  vertex_marker.hpp
src/autocompletion/: CMakeLists.txt  all.hpp  allfwd.hpp  binary_generator.cpp  binary_generator.hpp
src/clustering/: CMakeLists.txt  all.hpp  allfwd.hpp  backend.hpp  backend_config.cpp  backend_config.hpp  cluster_map.hpp  clusterer.hpp  clusterer_builder.hpp  clustering.hpp  color_pool.cpp  color_pool.hpp  config.cpp  config.hpp  infomap_clusterer.hpp  infomap_clustering.hpp  k_spanning_tree_clusterer.hpp  k_spanning_tree_clustering.hpp  kruskal_min_spanning_tree.hpp  layered_label_propagation_clusterer.hpp  layered_label_propagation_clustering.hpp  louvain_method_clusterer.hpp  louvain_method_clustering.hpp  maximal_clique_enumeration_clusterer.hpp  maximal_clique_enumeration_clustering.hpp  min_spanning_tree_finder.hpp  min_spanning_tree_finder_factory.hpp  plugin.hpp  prim_min_spanning_tree.hpp  shared_nearest_neighbour_clusterer.hpp  shared_nearest_neighbour_clustering.hpp  strong_components_clusterer.hpp  strong_components_clustering.hpp
src/color_coding/: CMakeLists.txt  all.hpp  allfwd.hpp  backend.cpp  backend.hpp  color_map.hpp  color_repo.cpp  color_repo.hpp  config.cpp  config.hpp
src/communication/: CMakeLists.txt  all.hpp  event.hpp  event_bus.cpp  event_bus.hpp
src/config/: CMakeLists.txt  all.hpp  allfwd.hpp  arch_deserialization.cpp  arch_deserialization.hpp  archive.cpp  archive.hpp  archives.cpp  archives.hpp  config.cpp  config.hpp  deserialization.cpp  deserialization.hpp  error.hpp  interactive.hpp  json_archive.cpp  json_archive.hpp
src/degrees/: CMakeLists.txt  all.hpp  allfwd.hpp  backend.cpp  backend.hpp  backend_config.hpp  config.cpp  config.hpp  effect_evaluation.cpp  effect_evaluation.hpp  evaluation.cpp  evaluation.hpp  evaluator.hpp
src/dependencies/: CMakeLists.txt  all.hpp  allfwd.hpp  backend.cpp  backend.hpp  config.cpp  config.hpp  core.cpp  core.hpp  core_private.hpp  deserialization.cpp  deserialization.hpp  graph.hpp  weight.hpp  weight_map.hpp  weight_map_private.hpp  weight_repo.cpp  weight_repo.hpp
src/features/: CMakeLists.txt
src/generation/: CMakeLists.txt  generation.cpp  generation.hpp
src/gui/: CMakeLists.txt  all.hpp  allfwd.hpp  background_configurator.cpp  background_configurator.hpp  clustering_editor.cpp  clustering_editor.hpp  color_coding_editor.cpp  color_coding_editor.hpp  commands_editor.cpp  commands_editor.hpp  config.cpp  config.hpp  configurator.cpp  configurator.hpp  controls_hud.cpp  controls_hud.hpp  controls_overlay.cpp  controls_overlay.hpp  core.cpp  core.hpp  degrees_editor.cpp  degrees_editor.hpp  dependencies_editor.cpp  dependencies_editor.hpp  editor.cpp  editor.hpp  file_browser.cpp  file_browser.hpp  file_dialog.cpp  file_dialog.hpp  frames_hud.cpp  frames_hud.hpp  frames_overlay.cpp  frames_overlay.hpp  graph_configurator.cpp  graph_configurator.hpp  gui.cpp  gui.hpp  gui_config.cpp  (+47 more)
src/input/: CMakeLists.txt  all.hpp  allfwd.hpp  camera_handler.cpp  camera_handler.hpp  event_dispatcher.cpp  event_dispatcher.hpp  gui_input_handler.cpp  gui_input_handler.hpp  gui_input_listener.cpp  gui_input_listener.hpp  hud_handler.cpp  hud_handler.hpp  input_dispatcher.cpp  input_dispatcher.hpp  inspection_handler.cpp  inspection_handler.hpp  pause_resume_handler.cpp  pause_resume_handler.hpp  quit_handler.cpp  quit_handler.hpp  shortcut_handler.cpp  shortcut_handler.hpp  stiff_camera_handler.cpp  stiff_camera_handler.hpp
src/json/: CMakeLists.txt  all.hpp  allfwd.hpp  archive.cpp  archive.hpp  deserialization.hpp
src/layout/: CMakeLists.txt  all.hpp  allfwd.hpp  backend.hpp  backend_config.cpp  backend_config.hpp  config.cpp  config.hpp  controller.hpp  core.cpp  core.hpp  core_private.hpp  cube.cpp  cube.hpp  deserialization.cpp  deserialization.hpp  events.hpp  factories.cpp  factories.hpp  gursoy_atun_layout.cpp  gursoy_atun_layout.hpp  gursoy_atun_layout_private.hpp  layout.cpp  layout.hpp  layout_enumerator.hpp  layout_factory.cpp  layout_factory.hpp  layout_plugin.hpp  layout_visitor.hpp  plugin.hpp  position_map.hpp  presenter.hpp  random_layout.hpp  service.hpp  services.cpp  services.hpp  sphere.cpp  sphere.hpp  topology.hpp  topology_enumerator.hpp  (+8 more)
src/metadata/: CMakeLists.txt  all.hpp  allfwd.hpp  config.cpp  config.hpp  graph.hpp  graph_accessor.hpp  symbol_table.cpp  symbol_table.hpp  symbols.hpp
src/misc/: CMakeLists.txt  algorithm.hpp  (+13 more)
tests/: CMakeLists.txt  clustering_tests.cpp  k_spanning_tree_clustering_tests.cpp  maximal_clique_enumeration_clustering_tests.cpp  shared_nearest_neighbour_clustering_tests.cpp  strong_components_clustering_tests.cpp  tests.cpp  utility.hpp
(+540 files in other folders)
